--- a/20_JS_Back_end_Sep_2021/01_IntroTo_NodeJS/03_Cat_Shelter/views/editCat.html
+++ b/20_JS_Back_end_Sep_2021/01_IntroTo_NodeJS/03_Cat_Shelter/views/editCat.html
@@ -14,9 +14,9 @@
     <header>
         <nav>
             <ul class="navigation">
-                <li><a href="">Home Page</a></li>
-                <li><a href="">Add Breed</a></li>
-                <li><a href="">Add Cat</a></li>
+                <li><a href="/">Home Page</a></li>
+                <li><a href="/cats/add-breed">Add Breed</a></li>
+                <li><a href="/cats/add-cat">Add Cat</a></li>
             </ul>
         </nav>
         <h1>Cat Shelter</h1>
@@ -34,7 +34,7 @@
             <select id="group">
                 {{catBreeds}}
             </select>
-            <button>Edit Cat</button>
+            <button type="submit">Edit Cat</button>
         </form>
     </main>
 </body>
