--- a/20_JS_Back_end_Sep_2021/04_ExpressTempleitingWorkshop/cubicle/src/views/404.hbs
+++ b/20_JS_Back_end_Sep_2021/04_ExpressTempleitingWorkshop/cubicle/src/views/404.hbs
@@ -1,7 +1,7 @@
 ><main>
   <img
     id="sadFaceImg"
-    src="https://imageog.flaticon.com/icons/png/512/42/42901.png?size=1200x630f&pad=10,10,10,10&ext=png&bg=FFFFFFFF"
+    src="https://i.pinimg.com/originals/fd/78/c4/fd78c47f2a009df65b5b5a46f4437399.png"
     alt="sad face"
   />
   <h1>404</h1>
