--- a/20_JS_Back_end_Sep_2021/08_SessionAndAuthWorkshop/cubicle/src/views/layouts/main.hbs
+++ b/20_JS_Back_end_Sep_2021/08_SessionAndAuthWorkshop/cubicle/src/views/layouts/main.hbs
@@ -17,6 +17,7 @@
           <li><a href="/accessory/create">Add an Accessory</a></li>
           <li><a href="/about">About</a></li>
           <li><a href="/login">Login</a></li>
+          <li><a href="/register">Register</a></li>
         </ul>
       </header>
       {{{body}}}
