--- a/20_JS_Back_end_Sep_2021/08_SessionAndAuthWorkshop/cubicle/src/views/cube/delete.hbs
+++ b/20_JS_Back_end_Sep_2021/08_SessionAndAuthWorkshop/cubicle/src/views/cube/delete.hbs
@@ -1,15 +1,15 @@
 <main>
     <h1>Delete Cube</h1>
     <div class="form">
-        <form action="#" method="POST">
+        <form action="/cube/{{_id}}/delete" method="POST">
             <label for="name">Name</label>
-            <input type="text" id="name" name="name" value="" disabled="true" />
+            <input type="text" id="name" name="name" value="{{name}}" disabled="true" />
             <label for="description">Description</label>
-            <textarea id="description" name="description" disabled="true" /></textarea>
+            <textarea id="description" name="description" disabled="true" />{{description}}</textarea>
             <label for="image">ImageUrl</label>
-            <input type="text" id="image" name="imageUrl" value="" disabled="true" />
+            <input type="text" id="image" name="imageUrl" value="{{imageUrl}}" disabled="true" />
             <label for="difficulty">Difficulty</label>
-            <select id="difficulty" name="difficultyLevel" value="" disabled="true" />
+            <select id="difficulty" name="difficulty" disabled="true" />
             <option value="1">1 - Very Easy</option>
             <option value="2">2 - Easy</option>
             <option value="3">3 - Medium (Standard 3x3)</option>
@@ -21,3 +21,7 @@
         </form>
     </div>
 </main>
+<script>
+    { { !--Dirty Hack-- } }
+    document.getElementById('difficulty').value = {{ difficulty }}
+</script>
