--- a/20_JS_Back_end_Sep_2021/09_ValidationErrorHandling/cubicle/src/views/layouts/main.hbs
+++ b/20_JS_Back_end_Sep_2021/09_ValidationErrorHandling/cubicle/src/views/layouts/main.hbs
@@ -17,6 +17,8 @@
                 {{#if user}}
                 <li><a href="/cube/create">Add a Cube</a></li>
                 <li><a href="/accessory/create">Add an Accessory</a></li>
+                <span>{{user.username}}</span>
+                <li><a href="/logout">Logout</a></li>
                 {{else}}
                 <li><a href="/login">Login</a></li>
                 <li><a href="/register">Register</a></li>
