add authentications for cube creators

--- a/20_JS_Back_end_Sep_2021/09_ValidationErrorHandling/cubicle/src/views/layouts/main.hbs
+++ b/20_JS_Back_end_Sep_2021/09_ValidationErrorHandling/cubicle/src/views/layouts/main.hbs
@@ -25,9 +25,9 @@
                 {{/if}}
             </ul>
         </header>
-        {{#if error}}
+        {{#if errors}}
         <div id="notifications">
-            <p id="notification-message">{{error}}</p>
+            <p id="notification-message">{{this}}</p>
         </div>
         {{/if}}
         {{{body}}}
