--- a/20_JS_Back_end_Sep_2021/09_ValidationErrorHandling/cubicle/src/views/cube/details.hbs
+++ b/20_JS_Back_end_Sep_2021/09_ValidationErrorHandling/cubicle/src/views/cube/details.hbs
@@ -5,20 +5,22 @@
         <p><span>Description:</span>{{description}}</p>
         <p><span>Difficulty level:</span> {{difficulty}}</p>
         <a class="btn" href="/">Back</a>
+        {{#if isOwn}}
         <a class="btn" href="/cube/{{_id}}/edit">Edit</a>
         <a class="btn" href="/cube/{{_id}}/delete">Delete</a>
         <a class="btn" href="/cube/{{_id}}/accessory/add">Add Accessory</a>
+        {{/if}}
     </div>
     <h2>Accessories</h2>
     <div class="accessories">
         {{#each accessories}}
-            <div class="accessory">
-                <img src="{{imageUrl}}" alt="{{name}}">
-                <h3>{{name}}</h3>
-                <p>{{description}}</p>
-            </div>
+        <div class="accessory">
+            <img src="{{imageUrl}}" alt="{{name}}">
+            <h3>{{name}}</h3>
+            <p>{{description}}</p>
+        </div>
         {{else}}
-            <h3 class="italic">This cube has no accessories yet...</h3>
+        <h3 class="italic">This cube has no accessories yet...</h3>
         {{/each}}
     </div>
 </main>
