--- a/20_JS_Back_end_Sep_2021/11_ExamPrep2/videoTutorials/src/views/course/create.hbs
+++ b/20_JS_Back_end_Sep_2021/11_ExamPrep2/videoTutorials/src/views/course/create.hbs
@@ -1,5 +1,5 @@
 <main>
-    <form class="text-center border border-light p-5" action="/courses/create" method="POST">
+    <form class="text-center border border-light p-5" action="/course/create" method="POST">
         <h1>Create Course</h1>
         <div class="form-group">
             <label for="title">Course Title</label>
