--- a/20_JS_Back_end_Sep_2021/11_ExamPrep2/videoTutorials/src/views/home/index.hbs
+++ b/20_JS_Back_end_Sep_2021/11_ExamPrep2/videoTutorials/src/views/home/index.hbs
@@ -12,7 +12,13 @@
 
             <div class="card-deck d-flex justify-content-center">
 
-                <div class="card mb-4">
+                {{#each courses}}
+                {{> course-card}}
+                {{else}}
+                <!-- If there are still no courses in the database display: -->
+                <!--<h4 class="text-center">No courses...</h4>-->
+                {{/each}}
+                {{!-- <div class="card mb-4">
                     <img class="card-img-top" src="https://colorlib.com/wp/wp-content/uploads/sites/2/angular-logo.png"
                         alt="Card image cap" width="400">
                     <div class="card-body">
@@ -35,10 +41,9 @@
                         <a href=""><button type="button" class="btn btn-info">Details</button></a>
                         <small class="float-right">Date...</small>
                     </div>
-                </div>
+                </div> --}}
 
-                <!-- If there are still no courses in the database display: -->
-                <!--<h4 class="text-center">No courses...</h4>-->
+
             </div>
         </div>
     </div>
