--- a/20_JS_Back_end_Sep_2021/11_ExamPrep2/videoTutorials/src/views/course/details.hbs
+++ b/20_JS_Back_end_Sep_2021/11_ExamPrep2/videoTutorials/src/views/course/details.hbs
@@ -15,11 +15,14 @@
 
                 {{#if user}}
                 {{#if isCreator}}
-                <a class="btn btn-danger" href="#">Delete</a>
-                <a class="btn btn-warning" href="#">Edit</a>
+                <a class="btn btn-danger" href="/course/{{_id}}/delete">Delete</a>
+                <a class="btn btn-warning" href="/course/{{_id}}/edit">Edit</a>
                 {{else}}
+                {{#if isUserEnrolled}}
                 <span class="enrolled-span">You are already enrolled</span>
-                <a class="btn btn-primary" href="#">Enroll</a>
+                {{else}}
+                <a class="btn btn-primary" href="/course/{{_id}}/enroll">Enroll</a>
+                {{/if}}
                 {{/if}}
                 {{/if}}
 
