Add edit course

--- a/20_JS_Back_end_Sep_2021/11_ExamPrep2/videoTutorials/src/views/home/index.hbs
+++ b/20_JS_Back_end_Sep_2021/11_ExamPrep2/videoTutorials/src/views/home/index.hbs
@@ -16,33 +16,8 @@
                 {{> course-card}}
                 {{else}}
                 <!-- If there are still no courses in the database display: -->
-                <!--<h4 class="text-center">No courses...</h4>-->
+                <h4 class="text-center">No courses...</h4>
                 {{/each}}
-                {{!-- <div class="card mb-4">
-                    <img class="card-img-top" src="https://colorlib.com/wp/wp-content/uploads/sites/2/angular-logo.png"
-                        alt="Card image cap" width="400">
-                    <div class="card-body">
-                        <h4 class="card-title">Angular</h4>
-                    </div>
-                    <div class="card-footer">
-                        <a href=""><button type="button" class="btn btn-info">Details</button></a>
-                        <small class="float-right">Date...</small>
-                    </div>
-                </div>
-
-                <div class="card mb-4">
-                    <img class="card-img-top"
-                        src="http://blog.addthiscdn.com/wp-content/uploads/2014/11/addthis-react-flux-javascript-scaling.png"
-                        alt="Card image cap" width="400">
-                    <div class="card-body">
-                        <h4 class="card-title">React</h4>
-                    </div>
-                    <div class="card-footer">
-                        <a href=""><button type="button" class="btn btn-info">Details</button></a>
-                        <small class="float-right">Date...</small>
-                    </div>
-                </div> --}}
-
 
             </div>
         </div>
