--- a/20_JS_Back_end_Sep_2021/11_ExamPrep2/videoTutorials/src/views/partials/course-card.hbs
+++ b/20_JS_Back_end_Sep_2021/11_ExamPrep2/videoTutorials/src/views/partials/course-card.hbs
@@ -5,6 +5,11 @@
     </div>
     <div class="card-footer">
         <a href="/course/{{_id}}/details"><button type="button" class="btn btn-info">Details</button></a>
-        <small class="float-right">Date...</small>
+        {{!-- {{#if isPublic}}
+        <a href="/course/{{_id}}/details"><button type="button" class="btn btn-info">Details</button></a>
+        {{else}}
+        <h5>Private course</h5>
+        {{/if}} --}}
+        <small class="float-right">Date {{createdAt}}</small>
     </div>
 </div>
