edit profile page, shows enrolled courses

--- a/20_JS_Back_end_Sep_2021/11_ExamPrep2/videoTutorials/src/views/auth/profile.hbs
+++ b/20_JS_Back_end_Sep_2021/11_ExamPrep2/videoTutorials/src/views/auth/profile.hbs
@@ -10,7 +10,9 @@
         <div class="flex">
             <p>Enrolled Courses: </p>
             <p>
-                <span>Angular, React</span>
+                {{#if enrolledCourses}}
+                <span>{{enrolledCourses}}</span>
+                {{/if}}
             </p>
         </div>
     </div>
