--- a/20_JS_Back_end_Sep_2021/12_ExamPrep3/sharedTrip/src/views/auth/register.hbs
+++ b/20_JS_Back_end_Sep_2021/12_ExamPrep3/sharedTrip/src/views/auth/register.hbs
@@ -21,10 +21,10 @@
                     </div>
                     <label>Gender</label>
                     <div class="gender">
-                        <input type="radio" id="female" name="gender" value="male">
-                        <label for="femaleee">Female</label>
-                        <input type="radio" id="male" name="gender" value="female" checked>
-                        <label for="maleee">Male</label>
+                        <input type="radio" id="female" name="gender" value="female">
+                        <label for="female">Female</label>
+                        <input type="radio" id="male" name="gender" value="male" checked>
+                        <label for="male">Male</label>
                     </div>
                     <div class="form-group">
                         <p>Already have account? <a href="/auth/login">Login Now!</a></p>
