--- a/20_JS_Back_end_Sep_2021/12_ExamPrep3/sharedTrip/src/views/layouts/main.hbs
+++ b/20_JS_Back_end_Sep_2021/12_ExamPrep3/sharedTrip/src/views/layouts/main.hbs
@@ -10,10 +10,10 @@
     <!-- In case of error, you should display div with class "error" -->
     <!-- You can choose to display the first error or all of them (error message/s in your opinion) -->
 
-    <!-- <div class="error">
+    {{!-- <div class="error">
         <p>Error message - 1</p>
         <p>Error message - 2</p>
-    </div> -->
+    </div> --}}
 
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
         <div class="container">
