--- a/20_JS_Back_end_Sep_2021/12_ExamPrep3/sharedTrip/src/views/layouts/main.hbs
+++ b/20_JS_Back_end_Sep_2021/12_ExamPrep3/sharedTrip/src/views/layouts/main.hbs
@@ -29,12 +29,12 @@
                         <a class="nav-link" href="/">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/sharedTrips/">Shared Trips</a>
+                        <a class="nav-link" href="/trip/">Shared Trips</a>
                     </li>
                     {{#if user}}
                     <!-- Logged users -->
                     <li class="nav-item">
-                        <a class="nav-link" href="">Offer Trip</a>
+                        <a class="nav-link" href="/trip/create">Offer Trip</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="/auth/{{_id}}/profile">Profile</a>
