--- a/20_JS_Back_end_Sep_2021/12_ExamPrep3/sharedTrip/src/views/partials/trip.hbs
+++ b/20_JS_Back_end_Sep_2021/12_ExamPrep3/sharedTrip/src/views/partials/trip.hbs
@@ -11,7 +11,7 @@
             <h5 class="mt-4"><i class="fas fa-hand-holding-usd"></i> Price: <span>{{price}}</span> BGN</h5>
         </div>
         <div class="card-footer">
-            <a href="" class="btn btn-primary">Details</a>
+            <a href="/trip/{{_id}}/details" class="btn btn-primary">Details</a>
         </div>
     </div>
 </div>
