--- a/20_JS_Back_end_Sep_2021/12_ExamPrep3/sharedTrip/src/views/auth/profile.hbs
+++ b/20_JS_Back_end_Sep_2021/12_ExamPrep3/sharedTrip/src/views/auth/profile.hbs
@@ -11,16 +11,24 @@
 
             <div class="trips-info">
                 <!-- If there are trips created by the current logged in user display each of them -->
-                <p>from <span>Svilengrad</span> to <span>Sofia</span> on <span>2021-06-16</span> at
+                {{#if tripsHistory}}
+                {{#each tripsHistory}}
+                <p>from <span>{{tripsHistory.startPoint}}</span> to <span>Burgas</span> on <span>2021-07-07</span> at
+                    <span>10:40</span>
+                    {{/each}}
+                    {{else}}
+                    <!-- If there are no trips created by the current logged in user display:-->
+                <p>there are no offer trips yet...</p>
+                {{/if}}
+                {{!-- <p>from <span>Svilengrad</span> to <span>Sofia</span> on <span>2021-06-16</span> at
                     <span>20:40</span>
                 </p>
                 <p>from <span>Plovdiv</span> to <span>Burgas</span> on <span>2021-07-07</span> at <span>10:40</span>
                 </p>
                 <p>from <span>Sofia</span> to <span>Nesebur</span> on <span>2021-08-01</span> at <span>09:00</span>
-                </p>
+                </p> --}}
 
-                <!-- If there are no trips created by the current logged in user display:-->
-                <p>there are no offer trips yet...</p>
+
             </div>
 
         </div>
