render a profile page and save booked hotel in DB

--- a/20_JS_Back_end_Sep_2021/13_ExamPrep4/bookingUni/src/views/layouts/main.hbs
+++ b/20_JS_Back_end_Sep_2021/13_ExamPrep4/bookingUni/src/views/layouts/main.hbs
@@ -26,11 +26,11 @@
             <div class="left-container">
                 <ul>
                     <li><a href="/">Home</a></li>
-                    <li><a href="">Add +</a></li>
+                    <li><a href="/booking/create">Add +</a></li>
                 </ul>
             </div>
             <div class="right-container">
-                <a href="/auth/profile" class="log-out">{{name}}</a>
+                <a href="/auth/{{user._id}}/profile" class="log-out">{{user.username}}</a>
                 <a href="/auth/logout" class="log-out">Logout</a>
             </div>
         </nav>
