--- a/20_JS_Back_end_Sep_2021/13_ExamPrep4/bookingUni/src/views/booking/create.hbs
+++ b/20_JS_Back_end_Sep_2021/13_ExamPrep4/bookingUni/src/views/booking/create.hbs
@@ -1,22 +1,15 @@
-<main>
-    <form class="text-center border border-light p-5" action="/course/create" method="POST">
-        <h1>Create Course</h1>
-        <div class="form-group">
-            <label for="title">Course Title</label>
-            <input type="text" class="form-control" placeholder="Course name" id="title" name="title" value="">
-        </div>
-        <div class="form-group">
-            <label for="description">Course Description</label>
-            <textarea class="form-control" placeholder="Description" id="description" name="description"></textarea>
-        </div>
-        <div class="form-group">
-            <label for="imageUrl">Image url</label>
-            <input type="text" class="form-control" placeholder="Image Url" id="imageUrl" name="imageUrl" value="">
-        </div>
-        <div class="form-check">
-            <input type="checkbox" class="form-check-input" id="check-box" name="isPublicParam">
-            <label class="form-check-label" for="check-box">Public</label>
-        </div>
-        <button type="submit" class="btn btn-primary">Submit</button>
+<section id="viewAddhotel">
+    <h2>Add new hotel</h2>
+    <form id="formAddhotel" action="/booking/create" method="POST">
+        <label for="hotel">Hotel name:</label>
+        <input type="text" id="hotel" name="name" placeholder="Hotel name">
+        <label for="city">City:</label>
+        <input type="text" id="city" name="city" placeholder="City">
+        <label for="free-rooms">Free rooms:</label>
+        <input type="number" id="free-rooms" name="freeRooms" placeholder="Free rooms">
+        <label for="imgUrl">Image:</label>
+        <input type="text" id="imgUrl" name="imageUrl" placeholder="https://">
+
+        <input type="submit" class="create" value="Add">
     </form>
-</main>
+</section>
