render details page

--- a/20_JS_Back_end_Sep_2021/13_ExamPrep4/bookingUni/src/views/partials/booking.hbs
+++ b/20_JS_Back_end_Sep_2021/13_ExamPrep4/bookingUni/src/views/partials/booking.hbs
@@ -1,4 +1,4 @@
-<a href="" class="added-hotel">
+<a href="/booking/{{_id}}/details" class="added-hotel">
     <img src="{{imageUrl}}" alt="" class="picture-added-hotel">
     <h3>{{name}}</h3>
     <span>Free rooms: {{freeRooms}}</span>
