--- a/20_JS_Back_end_Sep_2021/13_ExamPrep4/bookingUni/src/views/booking/details.hbs
+++ b/20_JS_Back_end_Sep_2021/13_ExamPrep4/bookingUni/src/views/booking/details.hbs
@@ -1,32 +1,28 @@
-<main>
-    <div class="container">
-        <h1 class="my-4">Course title : Angular
-        </h1>
-
-        <div class="row">
-
-            <div class="col-md-8">
-                <img class="img-fluid" src="{{imageUrl}}" alt="Express" />
-            </div>
-
-            <div class="col-md-4 text-center">
-                <h3 class="my-3">Course Description</h3>
-                <p>{{description}}</p>
-
-                {{#if user}}
-                {{#if isCreator}}
-                <a class="btn btn-danger" href="/course/{{_id}}/delete">Delete</a>
-                <a class="btn btn-warning" href="/course/{{_id}}/edit">Edit</a>
-                {{else}}
-                {{#if isUserEnrolled}}
-                <span class="enrolled-span">You are already enrolled</span>
-                {{else}}
-                <a class="btn btn-primary" href="/course/{{_id}}/enroll">Enroll</a>
-                {{/if}}
-                {{/if}}
-                {{/if}}
-
-            </div>
+<section id="viewhotelDetails">
+    <h2>Details</h2>
+    <div class="hotel-ticket">
+        <div class="hotel-left">
+            <img src="{{imageUrl}}" alt="">
         </div>
+        <div class="hotel-right">
+            <div>
+                <h3>Auckland Inn</h3>
+            </div>
+            <div>
+                Auckland
+            </div>
+            <p><span>Free rooms: 43</span> </p>
+            {{#if isCreator}}
+            <a href="" class="edit">Edit</a>
+            <a href="" class="remove">Delete</a>
+            {{else}}
+            <p><span class="green">You already have booked a room</span> </p>
+
+            <a href="" class="book">Book</a>
+            {{/if}}
+
+
+        </div>
+
     </div>
-</main>
+</section>
