--- a/20_JS_Back_end_Sep_2021/13_ExamPrep4/bookingUni/src/views/booking/details.hbs
+++ b/20_JS_Back_end_Sep_2021/13_ExamPrep4/bookingUni/src/views/booking/details.hbs
@@ -6,15 +6,15 @@
         </div>
         <div class="hotel-right">
             <div>
-                <h3>Auckland Inn</h3>
+                <h3>{{name}}</h3>
             </div>
             <div>
-                Auckland
+                {{city}}
             </div>
-            <p><span>Free rooms: 43</span> </p>
+            <p><span>Free rooms: {{freeRooms}}</span> </p>
             {{#if isCreator}}
-            <a href="" class="edit">Edit</a>
-            <a href="" class="remove">Delete</a>
+            <a href="/booking/{{_id}}/edit" class="edit">Edit</a>
+            <a href="/booking/{{_id}}/delete" class="remove">Delete</a>
             {{else}}
             <p><span class="green">You already have booked a room</span> </p>
 
