add book rooms option

--- a/20_JS_Back_end_Sep_2021/13_ExamPrep4/bookingUni/src/views/booking/details.hbs
+++ b/20_JS_Back_end_Sep_2021/13_ExamPrep4/bookingUni/src/views/booking/details.hbs
@@ -16,12 +16,12 @@
             <a href="/booking/{{_id}}/edit" class="edit">Edit</a>
             <a href="/booking/{{_id}}/delete" class="remove">Delete</a>
             {{else}}
+            {{#if isUserBooked}}
             <p><span class="green">You already have booked a room</span> </p>
-
-            <a href="" class="book">Book</a>
+            {{else}}
+            <a href="/booking/{{_id}}/book" class="book">Book</a>
             {{/if}}
-
-
+            {{/if}}
         </div>
 
     </div>
