--- a/20_JS_Back_end_Sep_2021/13_ExamPrep4/bookingUni/src/views/auth/profile.hbs
+++ b/20_JS_Back_end_Sep_2021/13_ExamPrep4/bookingUni/src/views/auth/profile.hbs
@@ -1,13 +1,13 @@
 <section id="viewhotelDetails">
-    <div class="profile"><img src="../static/img/profile.png" alt="default user">
+    <div class="profile"><img src="/static/img/profile.png" alt="default user">
         <h3>User Info:</h3>
         <div class="flex">
             <p>Username: </p>
-            <p>Johny</p>
+            <p>{{username}}</p>
         </div>
         <div class="flex">
             <p>Email: </p>
-            <p>john.doe@gmail.com</p>
+            <p>{{email}}</p>
         </div>
         <div class="flex">
             <p>Reservations: </p>
