add guards and populate correct info in profile page

--- a/20_JS_Back_end_Sep_2021/13_ExamPrep4/bookingUni/src/views/auth/profile.hbs
+++ b/20_JS_Back_end_Sep_2021/13_ExamPrep4/bookingUni/src/views/auth/profile.hbs
@@ -12,9 +12,18 @@
         <div class="flex">
             <p>Reservations: </p>
             <p>
-                <span>Hilton Toronto, </span>
-                <span>Auckland Inn, </span>
-                <span>Hotel Berlin, </span>
+                {{#if bookedHotels}}
+                <span>{{bookedHotels}}</span>
+                {{/if}}
+
+            </p>
+        </div>
+        <div class="flex">
+            <p>Offers: </p>
+            <p>
+                {{#if offeredHotels}}
+                <span>{{offeredHotels}}</span>
+                {{/if}}
             </p>
         </div>
     </div>
