--- a/20_JS_Back_end_Sep_2021/14_ExamPrep5/tutorials/src/views/auth/login.hbs
+++ b/20_JS_Back_end_Sep_2021/14_ExamPrep5/tutorials/src/views/auth/login.hbs
@@ -2,11 +2,11 @@
     <form class="text-center border border-light p-5" action="/auth/login" method="POST">
         <div class="form-group">
             <label for="username">Username</label>
-            <input type="text" class="form-control" placeholder="Username" id="username" name="username" value="">
+            <input type="text" class="form-control" placeholder="Username" name="username" value="">
         </div>
         <div class="form-group">
             <label for="password">Password</label>
-            <input type="password" class="form-control" placeholder="Password" id="password" name="password" value="">
+            <input type="password" class="form-control" placeholder="Password" name="password" value="">
         </div>
 
         <button type="submit" class="btn btn-primary">Login</button>
