--- a/20_JS_Back_end_Sep_2021/14_ExamPrep5/tutorials/src/views/course/create.hbs
+++ b/20_JS_Back_end_Sep_2021/14_ExamPrep5/tutorials/src/views/course/create.hbs
@@ -2,21 +2,21 @@
     <form class="text-center border border-light p-5" action="/course/create" method="POST">
         <h1>Create Course</h1>
         <div class="form-group">
-            <label for="title">Course Title</label>
-            <input type="text" class="form-control" placeholder="Course name" id="title" name="title" value="">
+            <label for="title">Title</label>
+            <input type="text" class="form-control" placeholder="Course name" name="title" value="">
         </div>
         <div class="form-group">
-            <label for="description">Course Description</label>
-            <textarea class="form-control" placeholder="Description" id="description" name="description"></textarea>
+            <label for="description">Description</label>
+            <textarea class="form-control" placeholder="Description" name="description"></textarea>
         </div>
         <div class="form-group">
             <label for="imageUrl">Image url</label>
-            <input type="text" class="form-control" placeholder="Image Url" id="imageUrl" name="imageUrl" value="">
+            <input type="text" class="form-control" placeholder="Image Url" name="imageUrl" value="">
         </div>
-        <div class="form-check">
-            <input type="checkbox" class="form-check-input" id="check-box" name="isPublicParam">
-            <label class="form-check-label" for="check-box">Public</label>
+        <div class="form-group">
+            <label for="duration">Duration</label>
+            <input type="text" class="form-control" placeholder="4 weeks" name="duration" value="">
         </div>
-        <button type="submit" class="btn btn-primary">Submit</button>
+        <button type="submit" class="btn btn-primary">Create</button>
     </form>
 </main>
