--- a/20_JS_Back_end_Sep_2021/14_ExamPrep5/tutorials/src/views/course/edit.hbs
+++ b/20_JS_Back_end_Sep_2021/14_ExamPrep5/tutorials/src/views/course/edit.hbs
@@ -1,24 +1,23 @@
 <main>
-    <form class="text-center border border-light p-5" action="/course/{{_id}}/edit" method="POST">
+    <form class="text-center border border-light p-5" action="" method="POST">
         <h1>Edit Course</h1>
         <div class="form-group">
-            <label for="title">Course Title</label>
-            <input type="text" class="form-control" placeholder="Course name" value="{{title}}" id="title" name="title">
+            <label for="title">Title</label>
+            <input type="text" class="form-control" placeholder="Course name" value="" name="title">
         </div>
         <div class="form-group">
-            <label for="description">Course Description</label>
-            <textarea class="form-control" placeholder="Description" id="description"
-                name="description">{{description}}</textarea>
+            <label for="description">Description</label>
+            <textarea class="form-control" placeholder="Description" name="description"></textarea>
         </div>
         <div class="form-group">
             <label for="imageUrl">Image url</label>
-            <input type="text" class="form-control" placeholder="Image Url" value="{{imageUrl}}" id="imageUrl"
-                name="imageUrl">
+            <input type="text" class="form-control" placeholder="Image Url" value="" name="imageUrl">
         </div>
-        <div class="form-check">
-            <input type="checkbox" class="form-check-input" id="check-box" name="isPublic">
-            <label class="form-check-label" for="check-box">Public</label>
+        <div class="form-group">
+            <label for="duration">Duration</label>
+            <input type="text" class="form-control" placeholder="4 weeks" value="" name="duration">
         </div>
-        <button type="submit" class="btn btn-primary">Submit</button>
+
+        <button type="submit" class="btn btn-primary">Edit</button>
     </form>
 </main>
