--- a/20_JS_Back_end_Sep_2021/14_ExamPrep5/tutorials/src/views/layouts/main.hbs
+++ b/20_JS_Back_end_Sep_2021/14_ExamPrep5/tutorials/src/views/layouts/main.hbs
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>JS Back-End - Exam - November 2020</title>
+    <title>{{title}}</title>
     <link href="../static/css/site.css" type="text/css" rel="stylesheet">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
         integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
@@ -12,25 +12,26 @@
 <body>
     <div class="container">
         <nav class="navbar navbar-expand-lg navbar-light bg-primary">
-            <a class="navbar-brand" href="#">Tutorials</a>
+            <a class="navbar-brand" href="/">Tutorials</a>
 
             <ul class="navbar-nav ml-auto">
-
+                {{#if user}}
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Welcome, {{username}}</a>
+                    <a class="nav-link" href="#">Welcome, {{user.username}}</a>
                 </li>
 
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Logout</a>
+                    <a class="nav-link" href="/auth/logout">Logout</a>
+                </li>
+                {{else}}
+                <li class="nav-item">
+                    <a class="nav-link" href="/auth/login">Login</a>
                 </li>
 
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Login</a>
+                    <a class="nav-link" href="/auth/register">Register</a>
                 </li>
-
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Register</a>
-                </li>
+                {{/if}}
 
             </ul>
         </nav>
