--- a/20_JS_Back_end_Sep_2021/14_ExamPrep5/tutorials/src/views/home/guest-home.hbs
+++ b/20_JS_Back_end_Sep_2021/14_ExamPrep5/tutorials/src/views/home/guest-home.hbs
@@ -11,42 +11,13 @@
         <div class="container mt-3">
             <div class="row d-flex justify-content-center">
 
-                <div class="card-deck">
-                    <div class="card mb-4">
-                        <img class="card-img-top"
-                            src="https://www.freecodecamp.org/news/content/images/size/w2000/2020/03/gpython.jpg"
-                            alt="Card image cap" width="400">
-                        <div class="card-body">
-                            <h4 class="card-title">Python</h4>
-                            <small class="float-right">Enrolled: 8</small>
-                        </div>
-                    </div>
-
-                    <div class="card mb-4">
-                        <img class="card-img-top"
-                            src="https://1.bp.blogspot.com/-pdqcVeIQp64/XDX7TzdRdcI/AAAAAAAAM8E/ZmGuB6caZqIGmEflGHcj3zgXJJrmqRLdgCLcBGAs/w1200-h630-p-k-no-nu/Free%2BCourses%2Bto%2Blearn%2BJavaScript.jpg"
-                            alt="Card image cap" width="400">
-                        <div class="card-body">
-                            <h4 class="card-title">JavaScript</h4>
-                            <small class="float-right">Enrolled: 4</small>
-                        </div>
-                    </div>
-
-                    <div class="card mb-4">
-                        <img class="card-img-top"
-                            src="https://colorlib.com/wp/wp-content/uploads/sites/2/angular-logo.png"
-                            alt="Card image cap" width="400">
-                        <div class="card-body">
-                            <h4 class="card-title">Angular</h4>
-                            <small class="float-right">Enrolled: 2</small>
-                        </div>
-                    </div>
-
-                </div>
-
+                {{#each courses}}
+                {{> course-guest-card}}
+                {{else}}
+                <!-- If there are still no courses in the database display: -->
+                <h4 class="text-center">No courses...</h4>
+                {{/each}}
             </div>
-            <h4 class="text-center">No courses...</h4>
-
         </div>
     </div>
 </main>
