create search functionality

--- a/20_JS_Back_end_Sep_2021/14_ExamPrep5/tutorials/src/views/home/guest-home.hbs
+++ b/20_JS_Back_end_Sep_2021/14_ExamPrep5/tutorials/src/views/home/guest-home.hbs
@@ -11,7 +11,7 @@
         <div class="container mt-3">
             <div class="row d-flex justify-content-center">
 
-                {{#each courses}}
+                {{#each first3CoursesByEnrolled}}
                 {{> course-guest-card}}
                 {{else}}
                 <!-- If there are still no courses in the database display: -->
