--- a/20_JS_Back_end_Sep_2021/14_ExamPrep5/tutorials/src/views/search.hbs
+++ b/20_JS_Back_end_Sep_2021/14_ExamPrep5/tutorials/src/views/search.hbs
@@ -12,7 +12,7 @@
     <div class="container mt-3">
         <div class="row ">
             <div class="card-deck d-flex justify-content-center">
-                {{#each allCourses}}
+                {{#each courses}}
                 {{> course-user-card}}
                 {{else}}
                 <!-- If there are still no courses in the database display: -->
