--- a/20_JS_Back_end_Sep_2021/14_ExamPrep5/tutorials/src/views/course/details.hbs
+++ b/20_JS_Back_end_Sep_2021/14_ExamPrep5/tutorials/src/views/course/details.hbs
@@ -1,27 +1,29 @@
 <main>
     <div class="container">
-        <h1 class="my-4">Title : JavaScript
+        <h1 class="my-4">Title : {{title}}
         </h1>
 
         <div class="row">
 
             <div class="col-md-8">
-                <img class="img-fluid"
-                    src="https://1.bp.blogspot.com/-pdqcVeIQp64/XDX7TzdRdcI/AAAAAAAAM8E/ZmGuB6caZqIGmEflGHcj3zgXJJrmqRLdgCLcBGAs/w1200-h630-p-k-no-nu/Free%2BCourses%2Bto%2Blearn%2BJavaScript.jpg"
-                    alt="JavaScript" />
+                <img class="img-fluid" src="{{imageUrl}}" alt="JavaScript" />
             </div>
 
             <div class="col-md-4 text-center">
                 <h4 class="my-3">Duration</h4>
-                <p>4 weeks</p>
+                <p>{{duration}}</p>
                 <h3 class="my-3">Description</h3>
-                <p>JavaScript is ...</p>
-
-                <a class="btn btn-danger" href="/">Delete</a>
-                <a class="btn btn-warning" href="/">Edit</a>
+                <p>{{description}}</p>
+                {{#if isCreator}}
+                <a class="btn btn-danger" href="/course/{{_id}}/delete">Delete</a>
+                <a class="btn btn-warning" href="/course/{{_id}}/edit">Edit</a>
+                {{else}}
+                {{#if isUserEnrolled}}
                 <span class="enrolled-span">You are already enrolled</span>
-                <a class="btn btn-primary" href="/">Enroll</a>
-
+                {{else}}
+                <a class="btn btn-primary" href="/course/{{_id}}/enroll">Enroll</a>
+                {{/if}}
+                {{/if}}
             </div>
         </div>
     </div>
