--- a/21_ReactJS/01_IntroToReactAndJSX/first-react-app/src/App.css
+++ b/21_ReactJS/01_IntroToReactAndJSX/first-react-app/src/App.css
@@ -1,5 +1,7 @@
 .App {
   text-align: center;
+  background-color: #282c34;
+  min-height: 100vh;
 }
 
 .App-logo {
@@ -14,8 +16,6 @@
 }
 
 .App-header {
-  background-color: #282c34;
-  min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -27,6 +27,20 @@
 .App-link {
   color: #61dafb;
 }
+
+.site-main {
+  background-color: #282c34;
+  font-size: calc(10px + 2vmin);
+  color: white;
+}
+
+
+.site-footer {
+  background-color: #282c34;
+  font-size: calc(10px + 2vmin);
+  color: white;
+}
+
 
 @keyframes App-logo-spin {
   from {
